--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,8 @@ nav{
 }
 
 main {
-    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(./imagens/Nirvana_album_cover.svg.png) no-repeat center center / cover fixed;
+    background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(./imagens/nirvana_bg.svg) no-repeat center center / cover fixed;
+    background-color: #1a1a1a;
     min-height: 100vh;
     height: auto;
     display: flex;
